# PFD-toolkit

./: .coverage  .gitignore  .railwayignore  404.html  CNAME  CONTRIBUTING.md  Dockerfile.railway.v02  LICENSE  README.md  development_notes.txt  index.html  main.py  mkdocs.yml  objects.inv  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  requirements.txt  sitemap.xml  streamlit_app.py
.github/workflows/: pfd_update.yml  test.yml  update_summary.txt  uv.yml
.streamlit/: config.toml
PFD-toolkit/: scraper.py
app/: README.md  pyproject.toml  streamlit_app.py
changelog/: index.html
contact/: index.html
contribute/: index.html
data/: age_extracted.csv  all_report_urls.csv  child_suicide.csv  child_suicide_tagged.csv  labelled_reports.csv  reports  sample_categorised_reports.csv  sample_report_urls.csv  scraped_reports.csv  suicide_reports.csv  suicie_reports_sample.csv  summarised_reports.csv  testreports.csv
django_workbench/: RAILWAY_DEPLOYMENT_GUIDE.md  README.md  db.sqlite3  manage.py
django_workbench/pfd_workbench/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
django_workbench/workbench/: models.py  services.py  sse.py  state.py  tests.py  urls.py  views.py
django_workbench_v02/: .env.example  STARTING_POINTS.md  db.sqlite3  manage.py
django_workbench_v02/accounts/: admin.py  forms.py  managers.py  models.py  services.py  tests.py  urls.py  views.py
django_workbench_v02/pfd_workbench_v02/: asgi.py  performance.py  seo.py  seo_views.py  settings.py  urls.py  wsgi.py
django_workbench_v02/templates/: 404.html  base.html
django_workbench_v02/wb_auditlog/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
django_workbench_v02/wb_collections/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
django_workbench_v02/wb_investigations/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
django_workbench_v02/wb_notifications/: admin.py  apps.py  models.py  services.py  tests.py
django_workbench_v02/wb_ops/: apps.py  tests.py  urls.py  views.py
django_workbench_v02/wb_runs/: admin.py  apps.py  artifact_storage.py  forms.py  models.py  pfd_toolkit_adapter.py  scope.py  services.py  tests.py  urls.py  views.py  worker.py
django_workbench_v02/wb_sharing/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
django_workbench_v02/wb_workspaces/: activity.py  admin.py  apps.py  context_processors.py  credentials.py  forms.py  lifecycle.py  models.py  permissions.py  report_identity.py  revisions.py  services.py  tests.py  urls.py  views.py
docs/: 404.html  CNAME  changelog.md  contribute.md  extractor.md  index.md  learn.md  llm_advanced.md  llm_setup.md  pfd_reports.md  screener.md  usage.md
docs/extractor/: basics.md  caching.md  index.md  spans.md  summarising.md  themes.md
docs/getting_started/: basic_tutorial.md  discover_themes.md  key_features.md  load_and_screen.md
docs/loader/: index.md  load_reports.md  scraper.md
docs/reference/: filter.md  loader.md  scraper.md
docs/screener/: basics.md  index.md  options.md  tips.md
docs/stylesheets/: extra.css
extractor/: index.html
extractor/basics/: index.html
llm_advanced/: index.html
llm_change_model/: index.html
llm_setup/: index.html
llm_speed/: index.html
loader/: index.html
non_coders/: index.html
notebooks/: DEMO_Cleaner.ipynb  DEMO_Extractor.ipynb  DEMO_Filter.ipynb  DEMO_Response_Format.ipynb  DEMO_Scraper.ipynb  DEMO_Screener.ipynb  DEMO_load_reports.ipynb  DEMO_topic_identification.ipynb  EVAL_Scraper.ipynb  JohnksTask.ipynb  JohnsTask.ipynb  getting_started.ipynb  ons_research.ipynb  pfd_toolkit_demo.ipynb
ons_replication/: ONS_master_spreadsheet.xlsx  child_suicide_cases.csv
open_llm_ons_experiment/: pipeline_spec.md  protocol.md
paper/: paper.md
pfd_reports/: index.html
pfd_toolkit/: __init__.py  api.env  scraper.py
screener/: index.html
scripts/: discover_theme_collections.py  sample_reports.csv  sample_reports_cleaned.csv  scrape_more.py  scrape_reports.py  test.ipynb  tmp_normalise_department_receivers.py  tmp_refresh_area_receiver.py  update_collections.py  update_report_count.py  update_reports.py  update_theme_collections.py
search/: search_index.json
tests/: conftest.py  eval.py  model_comparison.csv  model_comparison.py  model_comparison.txt  model_comparison_vis.py  screener_performance.py  screener_performance.txt  test_cleaner_screener.py  test_config.py  test_extractor.py  test_html_pdf_extractors.py  test_llm_extractor.py  test_llm_methods.py  test_loader.py  test_network_scraper.py  test_paired_statements.py  test_scraper_misc.py  test_streamlit_app.py  test_tabulate_function.py  test_text_utils.py
tutorials/: action_phrases.json  actionability_df.csv  getting_started.ipynb  joss_code.ipynb  paired_statements_demo.ipynb
usage/: index.html
(+208 files in other folders)
