[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfd_toolkit"
version = "0.1.20"
description = "A toolkit for using Prevention of Future Death (PFD) Reports for Research and Policy Projects."
readme = "README.md"
license = { file = "LICENCE" }
authors = [
  { name = "Samuel Osian", email = "soandrews98@gmail.com" },
  { name = "Jonathan Pytches", email = "jonathan.pytches@gmail.com " }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests",
  "beautifulsoup4",
  "pymupdf",
  "pandas",
  "python-dateutil",
  "pdf2image",
  "openai",
  "python-dotenv"
]
requires-python = ">=3.8"

[project.optional-dependencies]
docx-conversion = ["docx2pdf"]

[project.urls]
"Source" = "https://github.com/Sam-Osian/PFD-toolkit"
"Issues" = "https://github.com/Sam-Osian/PFD-toolkit/issues"