[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfd_toolkit"
version = "0.1.22"
description = "A toolkit for using Prevention of Future Death (PFD) Reports for Research and Policy Projects."
readme = "README.md"
license = { file = "LICENCE" }
authors = [
  { name = "Samuel Osian", email = "soandrews98@gmail.com" },
  { name = "Jonathan Pytches", email = "Search-me@on-Linkedin.co.uk" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "acres==0.3.0",
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "ci-info==0.3.0",
    "click==8.1.8",
    "comm==0.2.2",
    "configobj==5.0.9",
    "configparser==7.1.0",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docx2pdf==0.1.8",
    "dotenv==0.9.9",
    "etelemetry==0.3.1",
    "executing==2.2.0",
    "filelock==3.17.0",
    "fitz==0.0.1.dev2",
    "frontend==0.0.3",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.6.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jiter==0.8.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "looseversion==1.3.0",
    "lxml==5.3.1",
    "nest-asyncio==1.6.0",
    "numpy==2.2.3",
    "openai==1.65.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathlib==1.0.1",
    "pdf2image==1.17.0",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "puremagic==1.28",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydot==3.0.4",
    "pygments==2.19.1",
    "pymupdf==1.25.3",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyzmq==26.2.1",
    "requests==2.32.3",
    "scipy==1.15.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "starlette==0.46.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
]

[project.optional-dependencies]
docx-conversion = ["docx2pdf"]

[project.urls]
"Source" = "https://github.com/Sam-Osian/PFD-toolkit"
"Issues" = "https://github.com/Sam-Osian/PFD-toolkit/issues"